<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="70dp"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:ignore="MissingConstraints"
    android:background="@color/white">

    <ImageView
        android:layout_height="wrap_content"
        android:layout_margin="15sp"
        android:layout_width="wrap_content"
        android:src="@drawable/image_spisok"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:layout_width="wrap_content"
            android:text="@string/Name"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tvAuthor"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15sp"
                android:layout_width="wrap_content"
                android:text="@string/Author"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvIPC"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15sp"
                android:layout_width="wrap_content"
                android:text="@string/IPC"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvNumberApplication"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/Application_number"
                android:textColor="@color/black" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>
